Small media query fix and placeholder collapseomatic element in template.

--- a/public/assets/css/public.scss
+++ b/public/assets/css/public.scss
@@ -353,7 +353,7 @@ $usc-jobs-blue--transparent: rgba(31, 178, 232, .5);
   }
 }
 
-@media screen and (max-width: 979px) {
+@media screen and (max-width: 980px) {
   .button_area_at_the_bottom_of_a_single_usc_job ul li {
 
     width:    100%;
